[gd_scene load_steps=10 format=2]

[ext_resource path="res://LevelOne.tscn" type="PackedScene" id=1]
[ext_resource path="res://LevelTwo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ui.tscn" type="PackedScene" id=3]
[ext_resource path="res://AllLevels.gd" type="Script" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://ScnDetector.gd" type="Script" id=6]
[ext_resource path="res://LevelThree.tscn" type="PackedScene" id=7]
[ext_resource path="res://arte/assets/bg.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 91.963, 223.713 )

[node name="Game" type="Node2D"]
position = Vector2( 35.2361, 29.3633 )
script = ExtResource( 4 )
tetrisTime = 45

[node name="bg" type="Sprite" parent="."]
position = Vector2( 2702.23, 513.716 )
scale = Vector2( 2.92228, 2.92228 )
z_index = -99
texture = ExtResource( 8 )

[node name="Pieces" type="Node2D" parent="."]

[node name="Levels" type="Node2D" parent="."]

[node name="Level2" parent="Levels" instance=ExtResource( 7 )]
position = Vector2( 3361.08, -510.469 )
script = null

[node name="Area2D3" type="Area2D" parent="Levels/Level2"]
position = Vector2( -1676.53, 721.336 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
nextLevelCameraPos = NodePath("../level2Cam")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level2/Area2D3"]
position = Vector2( 0, 30.2186 )
shape = SubResource( 1 )

[node name="level2Cam" type="Position2D" parent="Levels/Level2" groups=[
"camPoints",
]]
position = Vector2( 1161.17, 517.886 )

[node name="Level1" parent="Levels" instance=ExtResource( 2 )]
position = Vector2( 1479.82, -156.197 )
script = null

[node name="Area2D2" type="Area2D" parent="Levels/Level1"]
position = Vector2( 1435.04, 7.55878 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
nextLevelCameraPos = NodePath("../../Level2/level2Cam")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/Level1/Area2D2"]
position = Vector2( 0, 30.2186 )
shape = SubResource( 1 )

[node name="level1Cam" type="Position2D" parent="Levels/Level1" groups=[
"camPoints",
]]
position = Vector2( 1115, 487.083 )

[node name="Level" parent="Levels" instance=ExtResource( 1 )]
script = null

[node name="Area2D" type="Area2D" parent="Levels/Level"]
position = Vector2( 1912.64, 232.711 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
nextLevelCameraPos = NodePath("../../Level1/level1Cam")

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 140.727, 546.162 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 923.95, 507.223 )
current = true

[node name="Ui" parent="Camera2D" instance=ExtResource( 3 )]
margin_left = -66.038
margin_top = -493.392
margin_right = -66.038
margin_bottom = -493.392
timerPath = NodePath("../../Timer")

[node name="PieceMarginA" type="Position2D" parent="Camera2D"]
position = Vector2( -649.525, -365.043 )

[node name="PieceMarginB" type="Position2D" parent="Camera2D"]
position = Vector2( 375.113, -372.596 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="Levels/Level2/Area2D3" to="Levels/Level2/Area2D3" method="_on_Area2D_body_entered"]
[connection signal="changeCamera" from="Levels/Level2/Area2D3" to="." method="_on_Area2D_changeCamera"]
[connection signal="body_entered" from="Levels/Level1/Area2D2" to="Levels/Level1/Area2D2" method="_on_Area2D_body_entered"]
[connection signal="changeCamera" from="Levels/Level1/Area2D2" to="." method="_on_Area2D_changeCamera"]
[connection signal="body_entered" from="Levels/Level/Area2D" to="Levels/Level/Area2D" method="_on_Area2D_body_entered"]
[connection signal="changeCamera" from="Levels/Level/Area2D" to="." method="_on_Area2D_changeCamera"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
